Closed
Bug 109862
Opened 24 years ago
Closed 24 years ago
multilayered windows icons (*.ico) dont disply in highest possible quality
Categories
(SeaMonkey :: UI Design, defect)
SeaMonkey
UI Design
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.1alpha
People
(Reporter: subotnik, Assigned: hyatt)
References
(Blocks 1 open bug, )
Details
Attachments
(3 files)
|
22.85 KB,
image/png
|
Details | |
|
3.74 KB,
patch
|
pavlov
:
review+
tor
:
superreview+
|
Details | Diff | Splinter Review |
|
9.15 KB,
image/x-icon
|
Details |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Macintosh; U; PPC; en-US; rv:0.9.5+) Gecko/20011109
BuildID: 20011112
A windows icon file may have several layers with different resolutions. Mozilla
does not choose the best available in a file but the worst.
Reproducible: Always
Steps to Reproduce:
1. go to <http://michael.nahrath.de/dnet/> or view the .ico file directly:
<http://michael.nahrath.de/dnet/img/favicon.ico>
Actual Results: The 1-bit version of the icon is displayed in the URL bar and
in the tabs
Expected Results: It should use the highest possible quality. If the icon file
is displayed directly in the browser window the bigger version (32x32) should be
used.
I built this icon with the Mac tool 'Icon Builder Pro' but checked it on
Windows-Systems. In IE the highest resolution and different sizes work.
Maybe I should rather have reopened bug 18502 for this but unfortunately this
bug is already bloated with advocacy.
| Reporter | ||
Comment 1•24 years ago
|
||
In the attached screenshot you may see what the different layers of
<http://michael.nahrath.de/dnet/img/favicon.ico> should look like.
Updated•24 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•24 years ago
|
QA Contact: sairuh → claudius
Comment 2•24 years ago
|
||
*** Bug 112242 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.1
Comment 3•24 years ago
|
||
not the worst layer is chosen, but the first one of the size 16x16. if such one
does not exist, the last existant layer is used.
Comment 4•24 years ago
|
||
note that still only the 16x16 version is displayed. however, there's no way
for the decoder to know if the icon is for a favicon or the browser window.
of course I could always use the largest version, but I'm not sure if that
would look good in the urlbar/tab bar
Comment 5•24 years ago
|
||
hyatt or pavlov, could one of you review this patch? thanks!
Comment 6•24 years ago
|
||
Comment on attachment 82903 [details] [diff] [review]
suggested patch
r=pavlov
Attachment #82903 -
Flags: review+
Comment on attachment 82903 [details] [diff] [review]
suggested patch
Please split the "if ((e.Width..." line.
sr=tor
Attachment #82903 -
Flags: superreview+
Comment 8•24 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 9•24 years ago
|
||
*** Bug 109214 has been marked as a duplicate of this bug. ***
Comment 10•23 years ago
|
||
*** Bug 187322 has been marked as a duplicate of this bug. ***
Comment 11•21 years ago
|
||
unfortunately I'm not sure that this is the icon that triggered this bug
| Reporter | ||
Comment 12•21 years ago
|
||
Christian, it is the icon I opened the bug with.
For me it was solved by the patch, at least for the use in the URI-bar.
Doublecheck the Icon with other browsers! Safari still has the same bug.
Comment 13•21 years ago
|
||
ah, thank you!
I do not have safari available, unfortunately.
Updated•21 years ago
|
Product: Core → Mozilla Application Suite
You need to log in
before you can comment on or make changes to this bug.
Description
•