bug 109862 r=pavlov sr=tor multilayered windows icons (*.ico) dont disply in highest possible quality